gcc/testsuite/rust/rustc/ui/parser/doc-before-identifier.rs
fn /// document
foo() {}
// { dg-error "" "" { target *-*-* } .-2 }

fn main() {
    foo();
}

